Extract shared configs from SiteContextManager to a shared location for all engine modes Code tweaks