@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2007-2023 Crafter Software Corporation. All Rights Reserved.
+ * Copyright (C) 2007-2026 Crafter Software Corporation. All Rights Reserved.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 3 as published by
@@ -24,6 +24,7 @@ import org.craftercms.commons.entitlements.model.EntitlementType;
 import org.craftercms.commons.entitlements.validator.EntitlementValidator;
 import org.craftercms.commons.validation.annotations.param.ValidSiteId;
 import org.craftercms.engine.event.SiteContextRemovedEvent;
+import org.jspecify.annotations.NonNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.DisposableBean;
@@ -39,7 +40,6 @@ import java.util.*;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 
@@ -54,15 +54,15 @@ public class SiteContextManager implements ApplicationContextAware, DisposableBe
     private static final Logger logger = LoggerFactory.getLogger(SiteContextManager.class);
 
     protected ApplicationContext applicationContext;
-    protected LockByKey<String> sitesLock;
-    protected Map<String, SiteContext> contextRegistry;
-    protected SiteContextFactory contextFactory;
-    protected SiteContextFactory fallbackContextFactory;
-    protected SiteListResolver siteListResolver;
+    protected final LockByKey<String> sitesLock;
+    protected final Map<String, SiteContext> contextRegistry;
+    protected final SiteContextFactory contextFactory;
+    protected final SiteContextFactory fallbackContextFactory;
+    protected final SiteListResolver siteListResolver;
     protected EntitlementValidator entitlementValidator;
-    protected boolean waitForContextInit;
-    protected Executor jobThreadPoolExecutor;
-    protected String defaultSiteName;
+    protected final boolean waitForContextInit;
+    protected final Executor jobThreadPoolExecutor;
+    protected final String defaultSiteName;
     protected final Executor singleThreadExecutor;
 
     /**
@@ -88,12 +88,12 @@ public class SiteContextManager implements ApplicationContextAware, DisposableBe
     /**
      * Directory watcher watch paths
      */
-    protected String[] watcherPaths = {};
+    protected final String[] watcherPaths;
 
     /**
      * Directory watcher ignore paths
      */
-    protected String[] watcherIgnorePaths = {};
+    protected final String[] watcherIgnorePaths;
 
     /**
      * Directory watcher counter limit to run rebuild
@@ -157,11 +157,12 @@ public class SiteContextManager implements ApplicationContextAware, DisposableBe
     }
 
     @Override
-    public void setApplicationContext(ApplicationContext applicationContext) {
+    public void setApplicationContext(@NonNull ApplicationContext applicationContext) {
         this.applicationContext = applicationContext;
     }
 
     @Autowired
+    @SuppressWarnings("unused")
     public void setEntitlementValidator(@Lazy final EntitlementValidator entitlementValidator) {
         this.entitlementValidator = entitlementValidator;
     }
@@ -229,10 +230,10 @@ public class SiteContextManager implements ApplicationContextAware, DisposableBe
             String siteRootPath = contextFactory.resolveRootFolderPath(siteName);
             List<Path> paths = Arrays.stream(watcherPaths)
                     .map(resource -> Paths.get(siteRootPath + resource))
-                    .collect(Collectors.toList());
+                    .toList();
             List<Path> ignorePaths = Arrays.stream(watcherIgnorePaths)
                     .map(resource -> Paths.get(siteRootPath + resource))
-                    .collect(Collectors.toList());
+                    .toList();
             DirectoryWatcher watcher = DirectoryWatcher.builder()
                     .paths(paths)
                     .fileHasher(FileHasher.LAST_MODIFIED_TIME)
